# flit-ml

./: .env.production.template  .env.redis.template  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  PROJECT_ROADMAP.md  README.md  pyproject.toml  requirements.txt  run_tests.py  test_api.py  test_predictor.py  test_single_transaction.py  test_unknown_categories.py
docs/architecture/: PLUGIN_ARCHITECTURE.md  ml_data_infrastructure.md  shadow_mode_controller.md
docs/models/: bnpl0925_known_issues.md  bnpl0925_production_artifacts.md
flit_ml/: __init__.py
flit_ml/api/: bnpl_endpoints.py  main.py
flit_ml/config/: __init__.py  bigquery.py
flit_ml/core/: __init__.py  redis_storage.py  registry.py  shadow_controller.py
flit_ml/features/: __init__.py  bnpl.py  bnpl_feature_engineering.py
flit_ml/models/bnpl/: predictor.py
models/production/: bnpl_elastic_v0.1.0.joblib  bnpl_ensemble_v0.1.0.joblib  bnpl_logistic_v0.1.0.joblib  bnpl_multi_model_metadata_v0.1.0.json  bnpl_preprocessor_v0.1.0.joblib  bnpl_ridge_v0.1.0.joblib
research/notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_data_quality_validation.ipynb  03_model_development.ipynb
tests/integration/: conftest.py  test_api_endpoints.py  test_production_artifacts.py  test_shadow_controller_integration.py
tests/unit/core/: test_shadow_controller.py
tests/unit/features/: test_feature_engineering.py  test_unknown_categories.py
tests/unit/models/: test_multi_model_predictor.py
